[gd_scene load_steps=2 format=3 uid="uid://cwo48x7ohey00"]

[ext_resource type="Script" path="res://dino vs lizzards/game models/pausemenu.gd" id="1_5sdkp"]

[node name="pausemenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 479.0
offset_top = 272.0
offset_right = 479.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_5sdkp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 76.5
offset_top = 15.5
offset_right = 276.5
offset_bottom = 215.5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "resume
"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "settings
"

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "menu
"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
